src/components/Navbar.css
#navbar {
  width: 100%;
  height: 100px;
  padding: 15px 10%;
  background-color: #fff;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  position: relative;
  top: 0;
  z-index: 999;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.item {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.item li {
  list-style-type: none;
}

.menu-icon {
  display: none;
}

.search-bar {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: auto;
  height: 45px;
  background: #ffffff;
  border: 1px solid #e5eaf4;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
  border-radius: 8px;
  padding: 5px;
}

.search-logo {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
}

.search-bar input {
  border: none;
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  color: #b3bac5;
}

.search-bar input:focus {
  outline: none;
}

.search-bar input::placeholder {
  color: #b3bac5;
  opacity: 1;
}

.searc-bar input:-ms-input-placeholder {
  color: #b3bac5;
}

.search-bar input::-ms-input-placeholder {
  color: #b3bac5;
}

.button-search {
  background: #1565d8;
  border-radius: 8px;
  color: #fff;
  border: none;
  width: 94px;
  height: 40px;
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  transition: 0.5s;
  cursor: pointer;
}

.button-search:hover{
  background: #0d3b7c;
}

.button-clear {
  background: #ec8f15;
  border-radius: 8px;
  color: #fff;
  border: none;
  width: 94px;
  height: 40px;
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  transition: 0.5s;
  cursor: pointer;
}

.button-clear:hover {
  background: #b96900;
}

/* RESPONSIVE */
@media (max-width: 768px) {
  .menu-icon {
    display: block;
  }

  .item {
    position: fixed;
    flex-direction: column;
    width: 100%;
    height: 100vh;
    background: #fff;
    top: 80px;
    left: -100%;
    gap: 10px;
    transition: all .5s;
  }

  .item.expanded {
    left: 0;
  }
}

